# hyprcrop

./: .gitignore  Cargo.toml  README.ja.md  README.md
.github/workflows/: release.yml
PKGBUILD/: PKGBUILD
src/: main.rs
src/commands/: capture.rs
src/domain/: constants.rs  error.rs  mod.rs  types.rs
src/domain/config/: mod.rs
src/platform/capture/: mod.rs  portal.rs  screencopy.rs  toplevel_export.rs  wl_shared.rs
src/platform/system/: hyprland.rs  lock.rs  mod.rs
src/ui/freeze/: app.rs  mod.rs
