[package]
name = "hyprcrop"
version = "0.5.4"
edition = "2024"
authors = ["ry2x"]
description = "A fast, Hyprland-native screenshot tool written in Rust."
readme = "README.md"
repository = "https://github.com/ry2x/hyprcrop"

[[bin]]
name = "hyprcrop"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4", default-features = false, features = [
    "clock",
    "std",
] }
clap = { version = "4", features = ["derive", "wrap_help"] }
dirs = "6.0"
image = { version = "0.25", default-features = false, features = ["png"] }
iced = { version = "0.14", default-features = false, features = [
    "image",
    "canvas",
    "wgpu",
    "wayland",
    "crisp",
    "web-colors",
    "thread-pool",
] }
iced_layershell = { version = "0.17", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
toml = "1.1"
tempfile = "3.27"
wayland-client = "0.31"
wayland-protocols-wlr = { version = "0.3", features = [
    "client",
    "wayland-client",
] }
wayland-protocols = { version = "0.32", features = [
    "client",
    "unstable",
    "wayland-client",
] }
nix = { version = "0.31", features = ["mman", "fs", "poll"] }
memmap2 = "0.9"
ashpd = { version = "0.13", default-features = false, features = [
    "tokio",
    "screencast",
] }
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
pipewire = "0.9"
notify-rust = "4.16"
shell-words = "1.1.1"
wayland-protocols-hyprland = { version = "1.2", features = [
    "client",
    "wayland-client",
] }

[profile.release]
opt-level = 3
lto = true
panic = "abort"
strip = "symbols"

[profile.dev]
opt-level = 1
